--- a/pre-commit-config.yaml
+++ b/pre-commit-config.yaml
@@ -1,6 +1,6 @@
 - id: automate_functions
   name: Add functions to mkgendocs configurations YAML
-  entry: bash -c "python3 Python\ CreateGenfile.py; git add -u" --
+  entry: bash -c "python3 CreateGenfile.py; git add -u" --
   language: system
 - id: mkgendocs
   name: Generate markdown from docstrings
@@ -10,4 +10,3 @@
   name: Build the markdown documentation, run with '$ mkdocs serve' at http://127.0.0.1:8000/
   entry: bash -c 'mkdocs build'
   language: system
-  
